syntax = "proto3";

package m10.sdk.model;

// Arcadius Collection Documents

message AccountMetadata {
  /// The owner of the AccountMetadata
  bytes owner = 1;
  /// URL of the profile image associated with the account.
  string profile_image_url = 9;
  /// Name of the AccountMetadata.
  string name = 10;
  /// Public name of the AccountMetadata.
  string public_name = 11;
  /// Unique identifier (e.g. UUID) for the AccountMetadata.
  bytes id = 12;
}

message AccountSet {
  /// The owner of the AccountSet.
  bytes owner = 1;
  /// List of account references within the AccountSet.
  repeated bytes accounts = 2;
  /// Unique identifier (e.g. UUID) for the AccountSet.
  bytes id = 7;
}

message AccountInfo {
  /// Unique identifier for the account.
  bytes account_id = 1;
  /// Identifier of the parent account, if any.
  bytes parent_account_id = 2;
  /// Public name of the account.
  string public_name = 3;
  /// URL of the account's profile image.
    string profile_image_url= 4;
  /// Account code (e.g., currency code).
  string code = 5;
  /// Number of decimal places for the account's value.
  uint32 decimal_places = 6;
}

message BankAccountRef {
  /// Bank account type.
  enum BankAccountType {
  /// Central Bank Digital Currency.
    CBDC = 0; 
  /// Digital Regulated Money.
    DRM = 1;
  }
  /// Unique identifier for the bank account.
  bytes account_id = 1;
  /// Bank account type.
  BankAccountType account_type = 2;
}

message Bank {
  /// Unique identifier for the bank.
  bytes id = 1;
  /// Owner of the bank collection record.
  bytes owner = 2;
  /// Short name of the bank.
  string short_name = 3;
  /// Display name of the bank.
  string display_name = 4;
  /// List of BankAccountRef's.
  repeated BankAccountRef accounts = 5;
}
